<resources>
    <string name="app_name_release">Miita</string>
    <string name="app_name_staging">Miita(Staging)</string>
    <string name="app_name_debug">Miita(Debug)</string>

    <!-- Toolbar Action -->
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <!-- Navigation Header Default -->
    <string name="nav_default_user_name">anonymous</string>
    <string name="nav_default_user_id">anonymous</string>

    <!-- Navigation Item Name -->
    <string name="nav_all_item">すべての投稿</string>
    <string name="nav_stock_item">ストックした投稿</string>
    <string name="nav_follow_tag">フォローしたタグ</string>
    <string name="nav_setting">設定</string>

    <!-- Toolbar Title -->
    <string name="title_all_item">すべての投稿</string>
    <string name="title_stock_item">ストックした投稿</string>
    <string name="title_follow_tag">フォローしたタグ</string>
    <string name="title_settings">設定</string>
    <string name="title_license">License</string>

    <!-- Drawer Layout -->
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <!-- Alert Dialog Login -->
    <string name="alert_login_ok">OK</string>
    <string name="alert_login_cancel">Cancel</string>
    <string name="alert_login_title">ログインしますか？</string>
    <string name="alert_login_message">ログインすることで使用できます</string>

    <!-- Share Compat -->
    <string name="title_share_item">アプリを選択</string>

    <!-- Home / Item Activity Intent params -->
    <!-- TODO: item_id, item_title, etc,,, -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference -->
    <!-- Feedback -->
    <string name="pref_title_feedback">ご意見・ご要望</string>
    <string name="pref_key_feedback">pref_key_feedback</string>

    <!-- Fetch PerPage -->
    <string name="pref_title_per_page">取得件数</string>
    <string name="pref_key_per_page">pref_key_per_page</string>
    <string-array name="pref_per_page_titles">
        <item>50</item>
        <item>40</item>
        <item>30</item>
        <item>20</item>
        <item>10</item>
    </string-array>
    <string-array name="pref_per_page_values">
        <item>50</item>
        <item>40</item>
        <item>30</item>
        <item>20</item>
        <item>10</item>
    </string-array>

    <!-- LICENSE -->
    <string name="pref_title_license">LICENSE</string>
    <string name="pref_key_license">pref_key_license</string>

    <!-- Logout -->
    <string name="pref_title_logout">Logout</string>
    <string name="pref_key_logout">pref_key_logout</string>

    <!-- Version -->
    <!-- No Action -->
    <string name="pref_title_version">Version</string>
    <string name="pref_key_version">pref_key_version</string>


    <!-- Following After Delete -->
    <!-- Preference Sample -->

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
