<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- フィードバック -->
    <Preference
        android:title="@string/pref_title_feedback"
        android:key="@string/pref_key_feedback">
        <intent android:action="android.intent.action.BUG_REPORT" />
    </Preference>

    <!-- 取得件数 -->
    <ListPreference
        android:title="@string/pref_title_per_page"
        android:key="@string/pref_key_per_page"
        android:defaultValue="30"
        android:entries="@array/pref_per_page_titles"
        android:entryValues="@array/pref_per_page_values"
        android:positiveButtonText="@null"
        android:negativeButtonText="@null"
        />

    <!-- LICENSE -->
    <Preference
        android:title="@string/pref_title_license"
        android:key="@string/pref_key_license">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.naoto.yamaguchi.miita"
            android:targetClass="com.naoto.yamaguchi.miita.activity.LicenseActivity">
        </intent>
    </Preference>

    <!-- Logout -->
    <Preference
        android:title="@string/pref_title_logout"
        android:key="@string/pref_key_logout">
        <!-- click -->
    </Preference>

    <!-- Version -->
    <Preference
        android:title="@string/pref_title_version"
        android:key="@string/pref_key_version">
        <!-- NOOP -->
    </Preference>
</PreferenceScreen>