<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_item"
            android:icon="@drawable/ic_menu_all_item_48px"
            android:title="@string/nav_all_item" />
        <item
            android:id="@+id/nav_stock_item"
            android:icon="@drawable/ic_menu_stock_item_48px"
            android:title="@string/nav_stock_item"/>
        <item
            android:id="@+id/nav_follow_tag"
            android:icon="@drawable/ic_menu_follow_tag_48px"
            android:title="@string/nav_follow_tag" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_settings_48px"
            android:title="@string/nav_setting" />
    </group>
</menu>